--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Hello from Andrew</h1>
-    <script src="../dist/damnson.js"></script>
+    <script src="../dist/main.js"></script>
 </body>
 
 </html>
